gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test22709.d
version https://git-lfs.github.com/spec/v1
oid sha256:53e78937164b89ba4046ffecfec0e2d0386a75c21c9a4368d1318c6ec4b9c207
size 582
